--- a/Flash Chat iOS13/Views/MessageCell.xib
+++ b/Flash Chat iOS13/Views/MessageCell.xib
@@ -20,11 +20,18 @@
                     <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="PJh-Ko-rRW">
                         <rect key="frame" x="10" y="10" width="301" height="52"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="YouAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="R6f-SU-LnP">
+                                <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="A9V-ef-uhL"/>
+                                    <constraint firstAttribute="height" constant="40" id="bgo-bU-g71"/>
+                                </constraints>
+                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gfp-sD-2H5">
-                                <rect key="frame" x="0.0" y="0.0" width="241" height="52"/>
+                                <rect key="frame" x="60" y="0.0" width="181" height="52"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lEP-oF-3bH">
-                                        <rect key="frame" x="10" y="10" width="221" height="32"/>
+                                        <rect key="frame" x="10" y="10" width="161" height="32"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" name="BrandLightPurple"/>
                                         <nil key="highlightedColor"/>
@@ -38,11 +45,11 @@
                                     <constraint firstItem="lEP-oF-3bH" firstAttribute="leading" secondItem="Gfp-sD-2H5" secondAttribute="leading" constant="10" id="c2Z-DJ-ejj"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MeAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="R6f-SU-LnP">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MeAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="QXh-oE-MiB">
                                 <rect key="frame" x="261" y="0.0" width="40" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="A9V-ef-uhL"/>
-                                    <constraint firstAttribute="height" constant="40" id="bgo-bU-g71"/>
+                                    <constraint firstAttribute="width" constant="40" id="8b2-74-FCa"/>
+                                    <constraint firstAttribute="height" constant="40" id="gUA-qi-Nrf"/>
                                 </constraints>
                             </imageView>
                         </subviews>
@@ -58,14 +65,16 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="label" destination="lEP-oF-3bH" id="Xxw-mW-nAk"/>
+                <outlet property="leftImageView" destination="R6f-SU-LnP" id="xYx-XC-Vhm"/>
                 <outlet property="messageBubble" destination="Gfp-sD-2H5" id="1o6-Nf-I7c"/>
-                <outlet property="rightImageView" destination="R6f-SU-LnP" id="256-DP-231"/>
+                <outlet property="rightImageView" destination="QXh-oE-MiB" id="u5k-dr-vu5"/>
             </connections>
-            <point key="canvasLocation" x="-20" y="121"/>
+            <point key="canvasLocation" x="-95" y="120"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="MeAvatar" width="36" height="36"/>
+        <image name="YouAvatar" width="36" height="36"/>
         <namedColor name="BrandLightPurple">
             <color red="0.98000001907348633" green="0.9649999737739563" blue="0.99599999189376831" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
